--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
+sudo: required
+
+services:
+  - docker
+
 language: go
+
+notifications:
+  email: true
+
 go:
-- 1.7.5
-- 1.8
+  - 1.8.1
+
 before_install:
 - curl -Ls https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip > ngrok.zip
 - unzip ngrok.zip
