--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ install:
 - make depend
 script:
 - docker login -e="${DOCKER_EMAIL}" -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
-- make push
+- make push IMAGE_TAGS="${CI_BUILD_REF_SLUG}-${CI_PIPELINE_ID} canary"
+# - make push APP_VERSION=${CI_COMMIT_TAG} IMAGE_TAGS="${CI_COMMIT_TAG} latest
