--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ before_install:
 install:
 - make depend
 script:
-- docker login -e="${DOCKER_EMAIL}" -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
+- docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
 - make push IMAGE_TAGS="ci-${TRAVIS_BUILD_ID} canary"
 # - make push APP_VERSION=${CI_COMMIT_TAG} IMAGE_TAGS="${CI_COMMIT_TAG} latest
